wb component added

--- a/apps/main/src/app/app.component.html
+++ b/apps/main/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container" >
     <h1>This is app container</h1>
     <wb-umd-test-umd-container></wb-umd-test-umd-container>
+    <wb-umd-test-whiteboard></wb-umd-test-whiteboard>
 </div>
